# product-notifier

./: .gitignore  Cargo.toml  README.md  example_config.json
src/: config.rs  error.rs  main.rs  notifier.rs  scraping.rs
src/notifier/: discord.rs
src/scraping/: amazon.rs  amd.rs  antonline.rs  bestbuy.rs  bnh.rs  mod.rs  newegg.rs  provider.rs  target.rs
src/scraping/provider/: amazon.rs  amd.rs  antonline.rs  bestbuy.rs  bnh.rs  mod.rs  newegg.rs  tigerdirect.rs  utilities.rs
