[package]
name = "product-notifier"
version = "0.1.0"
authors = ["Logan Saso <logansaso+tech@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4.15", features = ["serde"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
reqwest = { version = "0.10", features = ["gzip", "socks"] }
regex = "1.3.9"
lazy_static = "1.4.0"
futures = "0.3.5"
async-trait = "0.1.40"
thiserror = "1.0.22"